tests/macros/raw_select/extension.stderr
error: option `extension` does not exist for kind `raw_select`
 --> $DIR/extension.rs:2:47
  |
2 |     let q = discourse::questions![RawSelect { extension: todo!() }];
  |                                               ^^^^^^^^^
