tests/macros/raw_select/extension.rs
fn main() {
    let q = discourse::questions![RawSelect { extension: todo!() }];
}
